administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -1,8 +1,9 @@
-Hey {{user.nick}},
+<h2>Hey {{user.nick}},</h2>
 
 You just registered with The Sixties Scoop Map at https://sixtiesscoop.geoforms.ca!
 Thats great. 
+<br/>
 
 We just need you to confirm your email address by clicking the following link:
-
+<br/>
 <a href="{{link}}">{{link}}</a>
