administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -1,4 +1,4 @@
-<h2>Hey {{user.nick}},</h2>
+<h2>Hey {{user.name}},</h2>
 
 You just registered with The Sixties Scoop Map at https://sixtiesscoop.geoforms.ca!
 Thats great. 
