administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -1,6 +1,6 @@
 <h2>Hey {{user.name}},</h2>
 
-You just registered with The Sixties Scoop Map at https://sixtiesscoop.geoforms.ca!
+You just registered with The Sixties Scoop Map at https://sixtiesscoop.geoforms.ca !!<br/>
 Thats great. 
 <br/>
 
