administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -1,7 +1,7 @@
 <h2>Hey {{user.name}},</h2>
 
 You just registered with The Sixties Scoop Map at https://sixtiesscoop.geoforms.ca !!<br/>
-Thats great. 
+Thats great! Thanks!
 <br/>
 
 We just need you to confirm your email address by clicking the following link:
