administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -7,3 +7,6 @@ Thats great! Thanks!
 We just need you to confirm your email address by clicking the following link:
 <br/>
 <a href="{{link}}">{{link}}</a>
+<br/>
+
+Then you can get started with creating your story!
