administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -12,7 +12,7 @@ We just need you to confirm your email address by clicking the following link:
 Then you can get started with creating your story!
 
 
-<div><img 
+<div style="text-align:center; padding:30px;"><img 
     src="https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop/1/Uploads/HOf_[ImAgE]_RQa_[G]_BlH-%3Ethumb:%3E100x%3E100.png"
     />
 </div>
