administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/site-error-html.contentTemplate.html
+++ b/app/site-error-html.contentTemplate.html
@@ -3,5 +3,5 @@
 ">
     <h1>Awww Nuts!!</h1>
     <h2>Server Error</h2>
-    <img src="https://sixtiesscoop.geoforms.ca/php-core-app/users_files/user_files_1/Uploads/6Z6_[ImAgE]_[G]_Y66_ylY.png?thumb=>200x>150" />
+    <img src="https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixtiesscoop.geoforms.ca/1/Uploads/6Z6_%5BImAgE%5D_%5BG%5D_Y66_ylY-%3Ethumb%3A%3E200x%3E150.png" />
 </div>
