--- a/app/site-error-html.contentTemplate.html
+++ b/app/site-error-html.contentTemplate.html
@@ -5,3 +5,13 @@
     <h2>Server Error</h2>
     <img src="https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixtiesscoop.geoforms.ca/1/Uploads/6Z6_%5BImAgE%5D_%5BG%5D_Y66_ylY-%3Ethumb%3A%3E200x%3E150.png" />
 </div>
+
+<section>
+<h2>{{error}}</h2>
+
+    <ul>
+    {% for trace in stack %}
+            <li>{{ stack.file | split('/') | last }}</li>
+    {% endfor %}
+    </ul>
+</section>
