administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/site-error-html.contentTemplate.html
+++ b/app/site-error-html.contentTemplate.html
@@ -11,7 +11,7 @@
 
     <ul>
     {% for trace in stack %}
-            <li>{{ stack.file | split('/') | last }}</li>
+            <li>{{ trace.file | split('/') | last }}</li>
     {% endfor %}
     </ul>
 </section>
