--- a/app/site-error-html.contentTemplate.html
+++ b/app/site-error-html.contentTemplate.html
@@ -14,7 +14,9 @@
     }
     
     .error ul {
-        text-align: left;
+       text-align: left;
+        padding-left: 30%;
+        list-style: none;
     }
 
 
