--- a/app/site-error-html.contentTemplate.html
+++ b/app/site-error-html.contentTemplate.html
@@ -33,7 +33,7 @@
     
         <ul>
         {% for trace in stack %}
-                <li>{{ trace.file | split('/') | last }} {{trace.line}}</li>
+                <li>{{ trace.file | split('/') | last }} {{trace.line}} {{trace.function}}</li>
         {% endfor %}
         </ul>
     </section>
