--- a/app/module-introText-text.contentTemplate.html
+++ b/app/module-introText-text.contentTemplate.html
@@ -1,1 +1,3 @@
+#About
+
 The Sixties Scoop Network, formerly known as the National Indigenous Survivors of Child Welfare Network, have created this platform to help 60’s scoop survivors share their stories, visualize their geographical displacements and assist in finding family members and identifying resources.
