jon -- Auto Commit - Changes made through Frontend Interface

--- a/app/module-featuredText-text.contentTemplate.html
+++ b/app/module-featuredText-text.contentTemplate.html
@@ -1,2 +1,2 @@
 #Featured Stories
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+Survivors can directly input their own information into the online system and have the option to share as little or as much information about themselves as they want, this can include short videos, pictures and a short narrative about themselves. The mapping project is completely voluntary and participatory.
