--- a/app/module-featuredText-text.contentTemplate.html
+++ b/app/module-featuredText-text.contentTemplate.html
@@ -1,2 +1,2 @@
 #Featured Stories
-Survivors can directly input their own information into the online system and have the option to share as little or as much information about themselves as they want, this can include short videos, pictures and a short narrative about themselves. The mapping project is completely voluntary and participatory.
+Survivors can directly input their own information into the online system and have the option to share as little or as much information about themselves as they want; this can include short videos, pictures and a short narrative about themselves. The mapping project is completely voluntary and participatory. Below we have several examples of survivors stories.
