--- a/app/module-introText-text.contentTemplate.html
+++ b/app/module-introText-text.contentTemplate.html
@@ -1,3 +1,3 @@
 #About
 
-The 60's Scoop Network, formerly known as the National Indigenous Survivors of Child Welfare Network, have created this platform to help survivors share their stories, visualize their geographical displacement and assist in finding family members and identifying resources. Using the 60's Scoop platform allows you to:
+The 60's Scoop Network, formerly known as the National Indigenous Survivors of Child Welfare Network, have created this platform to help survivors share their stories, visualize their geographical displacement and assist in finding family members and identifying resources. Using the 60's Scoop platform allows you to search for other survivors, share your own story and connect with others.
