administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/module-html-install2-text.contentTemplate.html
+++ b/app/module-html-install2-text.contentTemplate.html
@@ -1,3 +1,4 @@
 #Visualize data trends across time and space
 
  - Create historical naratives that move
+ - Visualize their geographical displacements
